@@ -2373,7 +2373,7 @@ SEXP attribute_hidden do_capabilities(SEXP call, SEXP op, SEXP args, SEXP rho)
     }
     else
     {
-#if defined(HAVE_LIBREADLINE) && defined(HAVE_READLINE_HISTORY_H)
+#if defined(HAVE_LIBREADLINE)
         extern Rboolean UsingReadline;
         if (R_Interactive && UsingReadline)
             LOGICAL(ans)[i] = TRUE;
@@ -3627,7 +3627,7 @@ SEXP attribute_hidden do_eSoftVersion(SEXP call, SEXP op, SEXP args, SEXP rho)
     HAVE_DECL_RTLD_DEFAULT && defined(HAVE_DECL_RTLD_NEXT) && HAVE_DECL_RTLD_NEXT
 
     /* Look for blas function dgemm and try to figure out in which
-       binary/shared library is it defined. That is based on experimentation
+       binary/shared library it is defined.  That is based on experimentation
        and heuristics, and depends on implementation details
        of dynamic linkers.
     */
