@@ -75,6 +75,9 @@
       \item Functions \code{URLencode()} and \code{URLdecode()} in
       package \pkg{utils} now work on vectors of URLs.
       Based on patch from Bob Rudis submitted with \PR{17873}.
+
+      \item \code{path.expand()} can expand \samp{~user} on most
+      Unix-alikes even when \code{readline} is not in use.
     }
   }
 
